--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -303,7 +303,7 @@ video {
     padding-left: 2.5rem;
   }
 }
-@media (min-width: 64em) {
+@media (min-width: 75em) {
   .container--pl {
     padding-left: 10.3125rem;
   }
@@ -654,6 +654,9 @@ video {
   margin-top: 2rem;
   cursor: pointer;
 }
+.slider__control #wavy-white-pattern {
+  display: none;
+}
 @media (min-width: 48em) {
   .slider {
     height: 472px;
@@ -668,9 +671,21 @@ video {
     height: 472px;
   }
   .slider__control {
+    position: relative;
     width: 51%;
     z-index: 2;
     height: 352px;
+  }
+  .slider__control .heading {
+    width: 281px;
+  }
+  .slider__control #wavy-white-pattern {
+    display: inline;
+    position: absolute;
+    top: 126px;
+    right: -67px;
+    bottom: unset;
+    left: unset;
   }
 }
 @media (min-width: 64em) {
@@ -680,6 +695,25 @@ video {
   .slider__control {
     height: 528px;
     padding-right: 2rem;
+  }
+}
+@media (min-width: 64em) and (min-width: 75em) {
+  .slider__control {
+    padding-left: 149px;
+  }
+}
+@media (min-width: 64em) {
+  .slider__control .heading {
+    width: 60%;
+  }
+}
+@media (min-width: 64em) {
+  .slider #wavy-white-pattern {
+    position: absolute;
+    top: 186px;
+    right: -67px;
+    bottom: unset;
+    left: unset;
   }
 }
 
